# PebbleOS

./: .gitignore  README.md
PebbleOS/: CMakeLists.txt  lizard_out.csv  out.md  west.yml
PebbleOS/CoreOS/: CMakeLists.txt  Kconfig  prj.conf
PebbleOS/CoreOS/boards/: native_sim_64.conf  native_sim_64.overlay  nrf52840dk_nrf52840.overlay
PebbleOS/CoreOS/conf/: device_blanca.conf  device_tintin.conf
PebbleOS/CoreOS/src/: CMakeLists.txt  main.c  out.c
PebbleOS/CoreOS/src/applib/: CMakeLists.txt  app.c  app.h
PebbleOS/CoreOS/src/applib/fonts/: CMakeLists.txt  font.h
PebbleOS/CoreOS/src/applib/graphics/: CMakeLists.txt  framebuffer.c  framebuffer.h  gcontext.c  graphics.c  gtypes.h  text_layout.h  text_resources.c
PebbleOS/CoreOS/src/applib/graphics/types/: CMakeLists.txt  gcolor.h  grect.c
PebbleOS/CoreOS/src/applib/memory/: CMakeLists.txt  applib_malloc.c  applib_malloc.h
PebbleOS/CoreOS/src/applib/ui/: CMakeLists.txt  layer.c  menu_cell.h  menu_iterator.c  menu_iterator.h  menu_layer.c  menu_layer.h  menu_layer_callbacks.h  progress_layer.c  scroll_layer.c  window.c  window.h  window_stack.c  window_stack.h  window_stack_private.h
PebbleOS/CoreOS/src/apps/launcher/: CMakeLists.txt  launcher_app.c  launcher_app.h
PebbleOS/CoreOS/src/device/: device_blanca.h  device_tintin.h  pebble_device.h
PebbleOS/CoreOS/src/flash_map/: CMakeLists.txt  flash_map.c  flash_map.h
PebbleOS/CoreOS/src/fw/applib/fonts/: font.c  font.h
PebbleOS/CoreOS/src/fw/applib/graphics/: framebuffer.c  framebuffer.h  gbitmap.c  gbitmap.h  gcontext.h  gcontext_types.h  graphics.h  text.c  text.h  text_layout.c  text_resources.c  text_resources.h
PebbleOS/CoreOS/src/fw/applib/graphics/types/: gpoint.h  grect.h  gsize.h
PebbleOS/CoreOS/src/fw/applib/ui/: layer.c  layer.h  menu_cell.h  menu_iterator.c  menu_iterator.h  menu_layer.c  menu_layer.h  progress_layer.c  progress_layer.h  scroll_layer.h  text_layer.c  text_layer.h  window.c  window.h
PebbleOS/CoreOS/src/fw/apps/launcher/: launcher_app.c  launcher_app.h
PebbleOS/CoreOS/src/fw/drivers/display/: drv_display.c  drv_display.h
PebbleOS/CoreOS/src/fw/kernel/: main_thread.c  pebble_thread.c  pebble_thread.h
PebbleOS/CoreOS/src/fw/resource/: resource.c  resource.h  resource_storage_flash.h  resource_storage_impl.h  resource_system_font.h
PebbleOS/CoreOS/src/kernel/: CMakeLists.txt  events.h  main_event_loop.c  main_event_loop.h  main_thread.c  main_thread.h  pebble_thread.c  pebble_thread.h  system_thread.c  system_thread.h
PebbleOS/CoreOS/src/process_management/: CMakeLists.txt  app_manager.c  app_manager.h  process_info.c  process_info.h  process_manager.c  process_manager.h  process_metadata.c  process_metadata.h
PebbleOS/CoreOS/src/process_state/: CMakeLists.txt
PebbleOS/CoreOS/src/process_state/app_state/: CMakeLists.txt  app_state.c  app_state.h
PebbleOS/CoreOS/src/resource/: CMakeLists.txt  resource_storage.c  resource_storage.h  resource_storage_flash.c  resource_system_font.c
PebbleOS/CoreOS/src/util/: CMakeLists.txt  list.c  list.h  order.c  uuid.h
PebbleOS/drivers/: CMakeLists.txt
PebbleOS/drivers/display/: CMakeLists.txt  Kconfig
PebbleOS/drivers/flash/: CMakeLists.txt  Kconfig
PebbleOS/os/: Kconfig  prj.conf
PebbleOS/os/boards/: p2d.conf  p2d.overlay  p2ddk.overlay
PebbleOS/os/src/: CMakeLists.txt  firmware_metadata.h  main.c
PebbleOS/tests/: CMakeLists.txt
PebbleOS/tests/CoreOS/: CMakeLists.txt
PebbleOS/tests/CoreOS/fw/applib/graphics/: CMakeLists.txt  testcase.yaml
PebbleOS/tests/CoreOS/fw/applib/graphics/src/: pebble_device.h  tests_framebuffer.c  tests_gpoint.c  tests_grect.c  tests_gsize.c
PebbleOS/tests/os/events/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
PebbleOS/tests/os/events/src/: main.c
scripts/: build.sh  build_nrf52840.sh  build_sim.sh  common.sh  flash.sh  init_project.sh  project.conf  run_unit_tests.sh  test.sh
tools/font_viewer/: CMakeLists.txt
tools/font_viewer/src/: main.c
tools/fontgen/: codepoints.json  fontgen.py
tools/resource_builder/: resource_builder.py  resources.json
(+109 files in other folders)
